[tool.poetry]
name = "salaf-audio"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
python-multipart = "^0.0.16"
mutagen = "^1.47.0"
websockets = "^13.1"
youtube-dl = "^2021.12.17"
pytube = "^15.0.0"
soundfile = "^0.12.1"
pyaudio = "^0.2.14"
wave = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
